--- a/Index.html
+++ b/Index.html
@@ -122,7 +122,7 @@ document.getElementById('contactForm').addEventListener('submit', function(event
             <a href="https://api.whatsapp.com/send?phone=%2B595991765892&context=ARDiVknuNYgWt195N-uljZhl0KxeCCfhJsOk8JyJ4ENR7vzvUKsy_Aqx6UYerSnIucVPOllghHTPMLSPDWjwDdmDehfaoWzL-J7U6PYyfGdCatIhO87AFebQoQTuT-BbqNsxM1iWDiyFjObtUzmlfP9L6A&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwY2xjawJEOKhleHRuA2FlbQIxMAABHaOQmS6Wr3ixFwvFCI8GqMKIi2JOqSq8A_zrC63lWggnF-Rbx0fHS1sHzw_aem_cuNDL88VM6x4GYzONbuYwA" target="_blank"><img src="Whatsapp icono.png" alt="Icono de WhatsApp"></a>
           </div>
         </div>
-        <p class="copyright">Copyright 2025 © Todos los Derechos Reservados</p>
+        <p class="copyright">Copyright 2025 © Todos los Derechos Reservados por el aleman toxico</p>
       </footer>
 </body>
 </html>
