--- a/Index.html
+++ b/Index.html
@@ -20,12 +20,12 @@
                 <img src="logo.png" alt="Logo de tu gimnasio">
             </div>
             <ul>
-                <li><a href="#">Gimnasios</a></li>
-                <li><a href="#">Tu espacio</a></li>
-                <li><a href="#">Smart Fit Go</a></li>
-                <li><a href="#">Smartfit App</a></li>
-                <li><a href="#">Planes Corporativos</a></li>
-                <li><a href="#">¡Inscríbete ya!</a></li>
+                <li><a href="#">Opcion1</a></li>
+                <li><a href="#">Opcion2</a></li>
+                <li><a href="#">Opcion3</a></li>
+                <li><a href="#">Opcion4</a></li>
+                <li><a href="#">Opcion5</a></li>
+                <li><a href="#" class="boton-redondeado">¡Inscríbete ya!</a></li>
             </ul>
         </nav>
     </header>
@@ -47,9 +47,7 @@
             <h2>Nuestros entrenadores</h2>
             <p>Conoce a nuestro equipo de profesionales.</p>
         </section>
-    </main>
 
-    <footer>
         <section class="imagenes-circulares">
             <h2>Nuestros Servicios Destacados</h2>
             <div class="contenedor-imagenes">
@@ -92,37 +90,36 @@
                     <textarea name="mensaje" placeholder="Escribe tu mensaje aquí..." required></textarea>
                     <button type="submit">Enviar mensaje</button>
                     <div id="message" style="display:none;"></div>
-</form>
-
-<script>
-document.getElementById('contactForm').addEventListener('submit', function(event) {
-    // Aquí puedes añadir validaciones del lado del cliente
-    // ...
-    document.getElementById('message').innerHTML = 'Mensaje enviado correctamente.';
-    document.getElementById('message').style.display = 'block';
-});
-</script>
                 </form>
+                <script>
+                    document.getElementById('contactForm').addEventListener('submit', function(event) {
+                        // Aquí puedes añadir validaciones del lado del cliente
+                        // ...
+                        document.getElementById('message').innerHTML = 'Mensaje enviado correctamente.';
+                        document.getElementById('message').style.display = 'block';
+                    });
+                </script>
             </div>
-        </section>    
-    </footer>
+        </section>
+    </main>
+
     <footer>
         <div class="footer-content">
-          <div class="footer-section">
-            <img src="map icono.png" alt="Icono de ubicación">
-            <p>Av. Francisco Acuña De Figueroa casi, Asunción 001102</p>
-          </div>
-          <div class="footer-section">
-            <img src="telefono icono.png" alt="Icono de teléfono">
-            <p>+595 991 765 892</p>
-          </div>
-          <div class="footer-social">
-            <a href="https://www.facebook.com/macrogympy/?locale=es_LA" target="_blank"><img src="facebook icono.png" alt="Icono de Facebook"></a>
-            <a href="https://www.instagram.com/macrogymfitness/" target="_blank"><img src="instagram icono.png" alt="Icono de Instagram"></a>
-            <a href="https://api.whatsapp.com/send?phone=%2B595991765892&context=ARDiVknuNYgWt195N-uljZhl0KxeCCfhJsOk8JyJ4ENR7vzvUKsy_Aqx6UYerSnIucVPOllghHTPMLSPDWjwDdmDehfaoWzL-J7U6PYyfGdCatIhO87AFebQoQTuT-BbqNsxM1iWDiyFjObtUzmlfP9L6A&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwY2xjawJEOKhleHRuA2FlbQIxMAABHaOQmS6Wr3ixFwvFCI8GqMKIi2JOqSq8A_zrC63lWggnF-Rbx0fHS1sHzw_aem_cuNDL88VM6x4GYzONbuYwA" target="_blank"><img src="Whatsapp icono.png" alt="Icono de WhatsApp"></a>
-          </div>
+            <div class="footer-section">
+                <img src="map icono.png" alt="Icono de ubicación">
+                <p>Av. Francisco Acuña De Figueroa casi, Asunción 001102</p>
+            </div>
+            <div class="footer-section">
+                <img src="telefono icono.png" alt="Icono de teléfono">
+                <p>+595 991 765 892</p>
+            </div>
+            <div class="footer-social">
+                <a href="https://www.facebook.com/macrogympy/?locale=es_LA" target="_blank"><img src="facebook icono.png" alt="Icono de Facebook"></a>
+                <a href="https://www.instagram.com/macrogymfitness/" target="_blank"><img src="instagram icono.png" alt="Icono de Instagram"></a>
+                <a href="https://api.whatsapp.com/send?phone=%2B595991765892&context=ARDiVknuNYgWt195N-uljZhl0KxeCCfhJsOk8JyJ4ENR7vzvUKsy_Aqx6UYerSnIucVPOllghHTPMLSPDWjwDdmDehfaoWzL-J7U6PYyfGdCatIhO87AFebQoQTuT-BbqNsxM1iWDiyFjObtUzmlfP9L6A&source=FB_Page&app=facebook&entry_point=page_cta&fbclid=IwY2xjawJEOKhleHRuA2FlbQIxMAABHaOQmS6Wr3ixFwvFCI8GqMKIi2JOqSq8A_zrC63lWggnF-Rbx0fHS1sHzw_aem_cuNDL88VM6x4GYzONbuYwA" target="_blank"><img src="Whatsapp icono.png" alt="Icono de WhatsApp"></a>
+            </div>
         </div>
-        <p class="copyright">Copyright 2025 © Todos los Derechos Reservados por el aleman toxico</p>
-      </footer>
+        <p class="copyright">Copyright 2025 © Todos los Derechos Reservados por el Aleman Toxico</p>
+    </footer>
 </body>
 </html>
