--- a/maquinas.html
+++ b/maquinas.html
@@ -43,7 +43,7 @@
         <!-- Hero Section con imagen redondeada -->
         <div class="hero-section">
             <div class="imagen-redondeada">
-                <img src="imagen1.jpg" alt="Equipamiento en MACRO GYM">
+                <img src="img/imagen1.jpg" alt="Equipamiento en MACRO GYM">
                 <div class="hero-content">
                     <h1 class="hero-title">NUESTRO EQUIPAMIENTO</h1>
                     <p class="hero-subtitle">Contamos con máquinas de última generación para tu entrenamiento</p>
