--- a/maquinas.html
+++ b/maquinas.html
@@ -30,7 +30,7 @@
                     <span class="bar"></span>
                 </div>
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Inicio</a></li>
+                    <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
                     <li class="nav-item"><a href="#boxeo" class="nav-link">Tu espacio</a></li>
                     <li class="nav-item"><a href="#entrenadores" class="nav-link">Smart Fit Go</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Smartfit App</a></li>
