--- a/maquinas.html
+++ b/maquinas.html
@@ -20,7 +20,7 @@
         <nav class="navbar">
             <div class="navbar-container">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="Index.html">
                         <img src="logo.png" alt="Logo MACRO GYM">
                     </a>
                 </div>
