--- a/maquinas.html
+++ b/maquinas.html
@@ -21,7 +21,7 @@
             <div class="navbar-container">
                 <div class="logo">
                     <a href="Index.html">
-                        <img src="logo.png" alt="Logo MACRO GYM">
+                        <img src="img/logo.png" alt="Logo MACRO GYM">
                     </a>
                 </div>
                 <div class="menu-toggle" id="mobile-menu">
@@ -339,7 +339,7 @@
             <div class="footer-content">
                 <div class="footer-info">
                     <div class="footer-logo">
-                        <img src="logo.png" alt="Logo MACRO GYM">
+                        <img src="img/logo.png" alt="Logo MACRO GYM">
                     </div>
                     <p>MACRO GYM es tu mejor opción para alcanzar tus objetivos de entrenamiento con instalaciones modernas y entrenadores profesionales.</p>
                 </div>
