--- a/Index.html
+++ b/Index.html
@@ -401,7 +401,7 @@
                         <span></span>
                     </div>
                     <p>Nos encantaría conocer tu opinión, déjanos un mensaje o llámanos a nuestros números habilitados.</p>
-                    <form action="https://formsubmit.co/kentoramirez16@gmail.com" method="POST" id="contactForm">
+                    <form action="https://formsubmit.co/kentoramirez16@gmail.com" method="POST">
                         <div class="form-group">
                             <div class="form-icon">
                                 <i class="fas fa-user"></i>
