--- a/maquinas.html
+++ b/maquinas.html
@@ -288,7 +288,7 @@
                             <span></span>
                         </div>
                         <p>Nos encantaría conocer tu opinión, déjanos un mensaje o llámanos a nuestros números habilitados.</p>
-                        <form action="https://formspree.io/f/mvgkzaln" method="POST" id="contactForm">
+                        <form action="https://formspree.io/f/mvgkzaln" method="POST">
                             <div class="form-group">
                                 <div class="form-icon">
                                     <i class="fas fa-user"></i>
