--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,7 @@
                     <li class="nav-item"><a href="#entrenadores" class="nav-link">Smart Fit Go</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Smartfit App</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Planes Corporativos</a></li>
-                    <li class="nav-item"><a href="#contacto" class="nav-link cta-button">¡Inscríbete ya!</a></li>
+                    <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">¡Inscríbete ya!</a></li>
                 </ul>
             </div>
         </nav>
