--- a/inscripcion.html
+++ b/inscripcion.html
@@ -278,19 +278,19 @@
                     <div class="footer-logo">
                         <img src="img/logo.png" alt="Logo MacroGym Fitness">
                     </div>
-                    <p>MacroGym Fitnessは、最新の設備とプロのトレーナーであなたのトレーニング目標達成をサポートする最高の選択肢です。</p>
+                    <p>MacroGym Fitnessは、MacroGym Fitness es tu mejor opción para alcanzar tus objetivos de entrenamiento con instalaciones modernas y entrenadores profesionales.。</p>
                 </div>
                 <div class="footer-links">
-                    <h3>クイックリンク</h3>
+                    <h3>Enlaces rápidos</h3>
                     <ul>
-                        <li><a href="Index.html#entrena_aqui">ジム施設</a></li>
-                        <li><a href="Index.html#boxeo">ボクシングクラス</a></li>
-                        <li><a href="Index.html#entrenadores">トレーナー</a></li>
-                        <li><a href="Index.html#contacto">お問い合わせ</a></li>
+                        <li><a href="Index.html#entrena_aqui">Nuestro Gimnasio</a></li>
+                        <li><a href="Index.html#boxeo">Clases de Boxeo</a></li>
+                        <li><a href="Index.html#entrenadores">Entrenadores</a></li>
+                        <li><a href="Index.html#contacto">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
-                    <h3>連絡先</h3>
+                    <h3>Información de contacto</h3>
                     <div class="footer-contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <p>Av. Francisco Acuña De Figueroa casi, Asunción 001102</p>
@@ -305,8 +305,8 @@
                     </div>
                 </div>
                 <div class="footer-newsletter">
-                    <h3>ニュースレター登録</h3>
-                    <p>ニュース、プロモーション、フィットネスのアドバイスをメールで受け取る。</p>
+                    <h3>Suscripción al boletín informativo</h3>
+                    <p>Recibe noticias, promociones y consejos de fitness por correo electrónico.</p>
                     <form class="newsletter-form">
                         <input type="email" placeholder="メールアドレス">
                         <button type="submit"><i class="fas fa-arrow-right"></i></button>
