--- a/inscripcion.html
+++ b/inscripcion.html
@@ -308,7 +308,7 @@
                     <h3>Suscripción al boletín informativo</h3>
                     <p>Recibe noticias, promociones y consejos de fitness por correo electrónico.</p>
                     <form class="newsletter-form">
-                        <input type="email" placeholder="メールアドレス">
+                        <input type="email" placeholder="Correo Electronico">
                         <button type="submit"><i class="fas fa-arrow-right"></i></button>
                     </form>
                 </div>
