--- a/maquinas.html
+++ b/maquinas.html
@@ -314,7 +314,7 @@
                                 <input type="tel" name="telefono" placeholder="Teléfono">
                             </div>
                             <div class="form-group">
-                                <div class="form-icon">
+                                <div class="form-icon comment">
                                     <i class="fas fa-comment"></i>
                                 </div>
                                 <textarea name="mensaje" placeholder="Escribe tu mensaje aquí..." required></textarea>
