update de Máquinas
Mejoré el hero de la página de Máquinas para que coincida con el estilizado del index.

--- a/maquinas.html
+++ b/maquinas.html
@@ -21,7 +21,7 @@
             <div class="navbar-container">
                 <div class="logo">
                     <a href="Index.html">
-                        <img src="img/logo.png" alt="Logo MACRO GYM">
+                        <img src="img/logo.png" alt="Logo MacroGym Fitness">
                     </a>
                 </div>
                 <div class="menu-toggle" id="mobile-menu">
@@ -30,7 +30,7 @@
                     <span class="bar"></span>
                 </div>
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
+                    <li class="nav-item"><a href="maquinas.html" class="nav-link">Maquinas</a></li>
                     <li class="nav-item"><a href="#boxeo" class="nav-link">Tu espacio</a></li>
                     <li class="nav-item"><a href="#entrenadores" class="nav-link">Smart Fit Go</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Smartfit App</a></li>
@@ -40,15 +40,15 @@
             </div>
         </nav>
 
-        <!-- Hero Section con imagen redondeada -->
+        <!-- Hero Section con imagen a pantalla completa -->
         <div class="hero-section">
-            <div class="imagen-redondeada">
-                <img src="img/imagen1.jpg" alt="Equipamiento en MACRO GYM">
-                <div class="hero-content">
-                    <h1 class="hero-title">NUESTRO EQUIPAMIENTO</h1>
-                    <p class="hero-subtitle">Contamos con máquinas de última generación para tu entrenamiento</p>
-                    <a href="#maquinas" class="hero-button">VER MÁQUINAS</a>
-                </div>
+            <div class="hero-background">
+                <img src="img/imagen1.jpg" alt="Entrenamiento en MacroGym">
+            </div>
+            <div class="hero-content">
+                <h1 class="hero-title">NUESTRO EQUIPAMIENTO</h1>
+                <p class="hero-subtitle">Contamos con máquinas de última generación para tu entrenamiento</p>
+                <a href="#maquinas" class="hero-button">VER MÁQUINAS</a>
             </div>
         </div>
     </header>
