--- a/admin.html
+++ b/admin.html
@@ -248,7 +248,7 @@
                     <p>MacroGym Fitness es tu mejor opción con equipos de última generación y entrenadores profesionales para ayudarte a alcanzar tus objetivos de entrenamiento.</p>
                 </div>
                 <div class="footer-links">
-                    <h3>クイックリンク</h3>
+                    <h3>Enlaces Rapidos</h3>
                     <ul>
                         <li><a href="Index.html">Hogar</a></li>
                         <li><a href="inscripcion.html">Registro</a></li>
@@ -295,7 +295,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p class="copyright">Copyright &copy; 2025 - MacroGym Fitnessのすべての権利を保有</p>
+            <p class="copyright">Copyright © 2025 - MacroGym Fitness Todos los derechos reservados</p>
         </div>
     </footer>
 
@@ -405,7 +405,7 @@
                 const data = loadData();
                 
                 if (data.length === 0) {
-                    alert('エクスポートするデータがありません');
+                    alert('No hay Datos para Exportar');
                     return;
                 }
                 
