--- a/inscripcion.html
+++ b/inscripcion.html
@@ -278,7 +278,7 @@
                     <div class="footer-logo">
                         <img src="img/logo.png" alt="Logo MacroGym Fitness">
                     </div>
-                    <p>MacroGym Fitnessは、MacroGym Fitness es tu mejor opción para alcanzar tus objetivos de entrenamiento con instalaciones modernas y entrenadores profesionales.。</p>
+                    <p>MacroGym Fitness、MacroGym Fitness es tu mejor opción para alcanzar tus objetivos de entrenamiento con instalaciones modernas y entrenadores profesionales.。</p>
                 </div>
                 <div class="footer-links">
                     <h3>Enlaces rápidos</h3>
