--- a/maquinas.html
+++ b/maquinas.html
@@ -31,10 +31,9 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Maquinas</a></li>
-                    <li class="nav-item"><a href="#boxeo" class="nav-link">Tu espacio</a></li>
-                    <li class="nav-item"><a href="#entrenadores" class="nav-link">Smart Fit Go</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Smartfit App</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Planes Corporativos</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Planes</a></li>
+                    <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">¡Inscríbete ya!</a></li>
                 </ul>
             </div>
