--- a/inscripcion.html
+++ b/inscripcion.html
@@ -142,10 +142,9 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Maquinas</a></li>
-                    <li class="nav-item"><a href="Index.html#boxeo" class="nav-link">Tu espacio</a></li>
-                    <li class="nav-item"><a href="Index.html#entrenadores" class="nav-link">Smart Fit Go</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Smartfit App</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Planes Corporativos</a></li>
+                    <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
+                    <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="#" class="nav-link cta-button">¡Inscríbete ya!</a></li>
                 </ul>
             </div>
