--- a/maquinas.html
+++ b/maquinas.html
@@ -31,7 +31,7 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Maquinas</a></li>
-                    <li class="nav-item"><a href="" class="nav-link">Planes</a></li>
+                    <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">¡Inscríbete ya!</a></li>
