--- a/Planes.html
+++ b/Planes.html
@@ -991,7 +991,7 @@
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Máquinas</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link">Inscripción</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calculadora IMC</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link cta-button">Planes</a></li> 
+                    <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">Inscribete Ya!</a></li> 
                 </ul>
             </div>
         </nav>
