--- a/Planes.html
+++ b/Planes.html
@@ -69,7 +69,7 @@
         /* Navbar */
         .navbar {
             position: fixed;
-            top: 0;
+            top: 20px;
             left: 0;
             width: 100%;
             z-index: 1000;
