--- a/Planes.html
+++ b/Planes.html
@@ -133,7 +133,7 @@
 
         .cta-button {
             background-color: var(--azul-logo);
-            color: white !important;
+            color: #333;
             padding: 10px 20px;
             border-radius: 30px;
             transition: all 0.3s ease;
