--- a/Planes.html
+++ b/Planes.html
@@ -96,7 +96,7 @@
         .nav-menu {
             display: flex;
             list-style: none;
-            margin-top: 0; /* ヘッダーメニューのマージントップを0に設定 */
+            margin-top: 20px; /* ヘッダーメニューのマージントップを0に設定 */
         }
 
         .nav-item {
