--- a/calculadora-imc.html
+++ b/calculadora-imc.html
@@ -559,8 +559,8 @@
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Máquinas</a></li>
-                    <li class="nav-item"><a href="inscripcion.html" class="nav-link">Inscripción</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link cta-button">Calculadora IMC</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">MacroGym App</a></li>
+                    <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">Inscribete ya!</a></li>
                 </ul>
             </div>
         </nav>
