--- a/calculadora-imc.html
+++ b/calculadora-imc.html
@@ -559,6 +559,7 @@
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Máquinas</a></li>
+                    <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">Inscribete ya!</a></li>
                 </ul>
