--- a/Planes.html
+++ b/Planes.html
@@ -1516,7 +1516,7 @@
                     </div>
                     <div class="footer-contact-item">
                         <i class="fas fa-envelope"></i>
-                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="aec7c0c8c1eec3cfcddcc1c9d7c380cdc1c3">[email&#160;protected]</a></p>
+                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="aec7c0c8c1eec3cfcddcc1c9d7c380cdc1c3">info@macrogymfitness.com</a></p>
                     </div>
                 </div>
                 <div class="footer-newsletter">
