--- a/inscripcion.html
+++ b/inscripcion.html
@@ -301,7 +301,7 @@
                     </div>
                     <div class="footer-contact-item">
                         <i class="fas fa-envelope"></i>
-                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5831363e371835393b2a373f2135763b3735">[email&#160;protected]</a></p>
+                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="5831363e371835393b2a373f2135763b3735">Todos los derechos reservados</a></p>
                     </div>
                 </div>
                 <div class="footer-newsletter">
@@ -329,7 +329,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p class="copyright">Copyright &copy; 2025 - MacroGym Fitnessのすべての権利を保有</p>
+            <p class="copyright">Copyright &copy; 2025 - MacroGym Fitness Todos los derechos reservados</p>
         </div>
     </footer>
 
