--- a/maquinas.html
+++ b/maquinas.html
@@ -16,6 +16,11 @@
         <i class="fas fa-chevron-up"></i>
     </button>
 
+    <!-- Botón de whatsapp -->
+    <a href="https://api.whatsapp.com/send?phone=%2B595994741907" target="_blank" class="whatsapp-btn">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
     <header>
         <nav class="navbar">
             <div class="navbar-container">
@@ -334,6 +339,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="index_script.js"></script>
     <script>
         // Inicializar AOS (Animate On Scroll)
         document.addEventListener('DOMContentLoaded', function() {
