--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,11 @@
         <i class="fas fa-chevron-up"></i>
     </button>
 
+    <!-- Botón de whatsapp -->
+    <a href="https://api.whatsapp.com/send?phone=%2B595994741907" target="_blank" class="whatsapp-btn">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
     <header>
         <nav class="navbar">
             <div class="navbar-container">
