--- a/galeria.html
+++ b/galeria.html
@@ -327,6 +327,41 @@
             position: relative;
         }
 
+        /* Botón de WhatsApp */
+        .whatsapp-btn {
+        position: fixed;
+        bottom: 100px;
+        right: 30px;
+        width: 50px;
+        height: 50px;
+        background-color: #25D366;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 28px;
+        box-shadow: var(--sombra-media);
+        z-index: 999;
+        transition: var(--transicion);
+        opacity: 0;
+        visibility: hidden;
+        }
+
+        .whatsapp-btn:hover {
+        transform: translateY(-5px) scale(1.05);
+        box-shadow: var(--sombra-fuerte);
+        }
+
+        .whatsapp-btn.visible {
+        opacity: 1;
+        visibility: visible;
+        }
+
+        /* Hasta aquí */
+
         .galeria-section::before {
             content: "";
             position: absolute;
@@ -1057,6 +1092,11 @@
         <i class="fas fa-chevron-up"></i>
     </button>
 
+    <!-- Botón de whatsapp -->
+    <a href="https://api.whatsapp.com/send?phone=%2B595994741907" target="_blank" class="whatsapp-btn">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+
     <header>
         <nav class="navbar">
             <div class="navbar-container">
@@ -1543,5 +1583,6 @@
             });
         });
     </script>
+    <script src="index_script.js"></script>
 </body>
 </html>
