--- a/calculadora-imc.html
+++ b/calculadora-imc.html
@@ -714,6 +714,7 @@
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Máquinas</a></li>
                     <li class="nav-item"><a href="galeria.html" class="nav-link">Galeria</a></li>
                     <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
+                    <li class="nav-item"><a href="fitness-wiki.html" class="nav-link">Fitness Wiki</a></li>
                     <li class="nav-item"><a href="" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">Inscribete ya!</a></li>
                 </ul>
