--- a/galeria.html
+++ b/galeria.html
@@ -1115,6 +1115,8 @@
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Máquinas</a></li>
                     <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
+                    <li class="nav-item"><a href="fitness-wiki.html" class="nav-link">Fitness Wiki</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">¡Inscríbete ya!</a></li>
                 </ul>
             </div>
