--- a/maquinas.html
+++ b/maquinas.html
@@ -39,6 +39,7 @@
                     <li class="nav-item"><a href="galeria.html" class="nav-link">Galeria</a></li>
                     <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
+                    <li class="nav-item"><a href="fitness-wiki.html" class="nav-link">Fitness Wiki</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">¡Inscríbete ya!</a></li>
                 </ul>
