--- a/inscripcion.html
+++ b/inscripcion.html
@@ -222,8 +222,8 @@
                         </div>
                         <select id="plan" name="plan" required>
                             <option value="">Elige un plan</option>
-                            <option value="Normal">Normal- ₲ 150.000/mes</option>
-                            <option value="2 meses">2 meses - ₲ 200.000/mes</option>
+                            <option value="Normal">PLAN INDIVIDUAL 150.000 Gs/mes</option>
+                            <option value="2 meses">PLAN PAREJAS 200.000 Gs/mes</option>
                         </select>
                     </div>
                     
@@ -236,12 +236,12 @@
                             <option value="">seleccione la zona horaria</option>
                             <option value="Mañana">Mañana (6:00 - 12:00)</option>
                             <option value="Tarde">Tarde (12:00 - 18:00)</option>
-                            <option value="Noche">Noche(18:00 - 23:00)</option>
+                            <option value="Noche">Noche(18:00 - 22:00)</option>
                         </select>
                     </div>
                     
                     <div class="form-group full-width">
-                        <label for="direccion">住所</label>
+                        <label for="direccion">DIRECCIÓN</label>
                         <div class="form-icon">
                             <i class="fas fa-home"></i>
                         </div>
