--- a/inscripcion.html
+++ b/inscripcion.html
@@ -141,10 +141,12 @@
                     <span class="bar"></span>
                 </div>
                 <ul class="nav-menu">
+                    <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Maquinas</a></li>
                     <li class="nav-item"><a href="galeria.html" class="nav-link">Galeria</a></li>
                     <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
+                    <li class="nav-item"><a href="fitness-wiki.html" class="nav-link"><Fitness Wiki</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="#" class="nav-link cta-button">¡Inscríbete ya!</a></li>
                 </ul>
