Update navbar y pantalla de carga

--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <!-- Pantalla de carga -->
+    <div id="loading-screen">
+        <div class="loader-container">
+            <div class="loader"></div>
+            <img src="img/logo.png" alt="Logo MacroGym Fitness" class="loader-logo">
+            <p>Cargando...</p>
+        </div>
+    </div>
+
     <!-- Botón para volver arriba -->
     <button id="back-to-top" class="back-to-top">
         <i class="fas fa-chevron-up"></i>
@@ -35,12 +44,12 @@
                     <span class="bar"></span>
                 </div>
                 <ul class="nav-menu">
+                    <li class="nav-item"><a href="Index.html" class="nav-link active">Inicio</a></li>
                     <li class="nav-item"><a href="maquinas.html" class="nav-link">Maquinas</a></li>
                     <li class="nav-item"><a href="galeria.html" class="nav-link">Galeria</a></li>
                     <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
                     <li class="nav-item"><a href="fitness-wiki.html" class="nav-link">Fitness Wiki</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">¡Inscríbete ya!</a></li>
                 </ul>
             </div>
