--- a/Planes.html
+++ b/Planes.html
@@ -29,6 +29,69 @@
             --transicion: all 0.3s ease;
         }
 
+        /* Estilos para la pantalla de carga */
+        #loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--fondo-oscuro);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        transition: opacity 0.5s ease, visibility 0.5s ease;
+        }
+
+        .loader-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        }
+
+        .loader {
+        width: 60px;
+        height: 60px;
+        border: 5px solid rgba(255, 255, 255, 0.2);
+        border-top: 5px solid var(--azul-logo);
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        margin-bottom: 20px;
+        }
+
+        .loader-logo {
+        width: 120px;
+        height: auto;
+        margin-bottom: 15px;
+        animation: pulse 2s infinite;
+        }
+
+        .loader-container p {
+        color: var(--texto-claro);
+        font-family: "Anton", sans-serif;
+        font-size: 1rem;
+        letter-spacing: 2px;
+        }
+
+        @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+        }
+
+        @keyframes pulse {
+        0% { transform: scale(1); }
+        50% { transform: scale(1.05); }
+        100% { transform: scale(1); }
+        }
+
+        /* Clase para ocultar la pantalla de carga */
+        #loading-screen.hidden {
+        opacity: 0;
+        visibility: hidden;
+        }
+
         /* Estilos generales */
         * {
             margin: 0;
@@ -213,6 +276,10 @@
 
         .nav-link:hover::after {
             width: 100%;
+        }
+
+        .nav-link.active {
+        color: var(--azul-logo);
         }
 
         .cta-button {
@@ -1199,6 +1266,15 @@
     </style>
 </head>
 <body>
+    <!-- Pantalla de carga -->
+    <div id="loading-screen">
+        <div class="loader-container">
+            <div class="loader"></div>
+            <img src="img/logo.png" alt="Logo MacroGym Fitness" class="loader-logo">
+            <p>Cargando...</p>
+        </div>
+    </div>
+
     <!-- Botón para volver arriba -->
     <button id="back-to-top" class="back-to-top">
         <i class="fas fa-chevron-up"></i>
@@ -1224,12 +1300,11 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
-                    <li class="nav-item"><a href="maquinas.html" class="nav-link">Máquinas</a></li>
+                    <li class="nav-item"><a href="maquinas.html" class="nav-link">Maquinas</a></li>
                     <li class="nav-item"><a href="galeria.html" class="nav-link">Galeria</a></li>
-                    <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
+                    <li class="nav-item"><a href="Planes.html" class="nav-link active">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
                     <li class="nav-item"><a href="fitness-wiki.html" class="nav-link">Fitness Wiki</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">MacroGym App</a></li>
                     <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button">¡Inscríbete ya!</a></li>
                 </ul>
             </div>
