--- a/fitness-wiki.html
+++ b/fitness-wiki.html
@@ -35,8 +35,8 @@
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Inicio</a></li>
-                    <li class="nav-item"><a href="maquinas.html" class="nav-link">Máquinas</a></li>
-                    <li class="nav-item"><a href="galeria.html" class="nav-link">Galería</a></li>
+                    <li class="nav-item"><a href="maquinas.html" class="nav-link">Maquinas</a></li>
+                    <li class="nav-item"><a href="galeria.html" class="nav-link">Galeria</a></li>
                     <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
                     <li class="nav-item"><a href="fitness-wiki.html" class="nav-link active">Fitness Wiki</a></li>
