--- a/inscripcion.html
+++ b/inscripcion.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        
+
         .inscripcion-section {
             padding: 120px 20px 80px;
             background-color: #f8f8f8;
@@ -65,6 +67,10 @@
             margin-bottom: 8px;
             font-weight: 600;
             color: var(--texto-oscuro);
+        }
+
+        .nav-link.cta-button.active_inscripcion {
+            background-color: var(--azul-logo);
         }
         
         .form-group select {
@@ -122,7 +128,7 @@
     </style>
 </head>
 <body>
-    <!-- ボタンを上に戻る -->
+    <!-- Botón para volver arriba -->
     <button id="back-to-top" class="back-to-top">
         <i class="fas fa-chevron-up"></i>
     </button>
@@ -146,9 +152,8 @@
                     <li class="nav-item"><a href="galeria.html" class="nav-link">Galeria</a></li>
                     <li class="nav-item"><a href="Planes.html" class="nav-link">Planes</a></li>
                     <li class="nav-item"><a href="calculadora-imc.html" class="nav-link">Calcula tu IMC</a></li>
-                    <li class="nav-item"><a href="fitness-wiki.html" class="nav-link"><Fitness Wiki</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">MacroGym App</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link cta-button">¡Inscríbete ya!</a></li>
+                    <li class="nav-item"><a href="fitness-wiki.html" class="nav-link">Fitness Wiki</a></li>
+                    <li class="nav-item"><a href="inscripcion.html" class="nav-link cta-button active_inscripcion">¡Inscríbete ya!</a></li>
                 </ul>
             </div>
         </nav>
